...
            equalTo: view.trailingAnchor,
            constant: -24
        ).isActive = true
        logoutButton.centerYAnchor.constraint(
            equalTo: userAvatarView.centerYAnchor
        ).isActive = true
        logoutButton.accessibilityIdentifier = "LogoutButton"
    }
    
    private func initUserPropertyLabel(
        label: UILabel,
        textColor: UIColor,
        font: UIFont,
...
