...
                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                        <color key="textColor" name="YP White"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" contentMode="bottom" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VVT-PR-3gB" userLabel="Favorites">
                        <rect key="frame" x="315" y="0.0" width="44" height="44"/>
                        <accessibility key="accessibilityConfiguration" identifier="FavotiteButton"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="44" id="3MC-zg-mV6"/>
                            <constraint firstAttribute="width" constant="44" id="csS-hW-LW4"/>
                        </constraints>
                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                        <state key="normal" title="Button" image="Favorites_NoActive"/>
...
